--- a/additional/index.html
+++ b/additional/index.html
@@ -20,7 +20,7 @@
 </style>
 
 
-<link rel="stylesheet" href="http://antelopelei.github.io//css/main.css">
+<link rel="stylesheet" href="https://antelopelei.github.io//css/main.css">
 
 
 
@@ -168,19 +168,19 @@
 
 <h3 id="supplementary-drugs-for-newbies"><strong>Supplementary Drugs for newbies</strong></h3>
 
-<p>If the builder holds a disposition 4 gynomastica Anastrazole known as fundamental strategy of estrogens supervision. Estrogen synthase inhibitor let you use <strong><a href="http://hardcoresport.github.io/blog/cypionate/">Testosterone 17beta-cypionate</a></strong> without concerns to get male gynecomastia. Femara while on cycles hold physical background plus prevent suppression of testosterone level. Anastrozol - expert to drop damages from Testosterone and keep you from bitch tits.</p>
+<p>If the builder holds a disposition 4 gynomastica Anastrazole known as fundamental strategy of estrogens supervision. Estrogen synthase inhibitor let you use <strong><a href="https://antelopelei.github.io/blog/cypionate/">Testosterone 17beta-cypionate</a></strong> without concerns to get male gynecomastia. Femara while on cycles hold physical background plus prevent suppression of testosterone level. Anastrozol - expert to drop damages from Testosterone and keep you from bitch tits.</p>
 
 <p>Proviron perfectly lifts reduced after-cycle libido. This drug does not provide whole protection against gynaecomastia. Proviron will support libido at constantly high intensity, efficiently battles 4 bodybuilder&rsquo;s AR. Mesterolone relieves all bonuses from Testosterone, in addition saving from gynecomastia.</p>
 
 <p>Choriongonadotropin protects balls from atrophy, it&rsquo;s go-to medicine 4 clever bodybuilders through long cycles. Human gonadotropin is your bondsman of protection and prime aide during complex combos. Chorionic Gonadotropin is needed on every cycle, without one, hormonal system will be extremely disrupted, users rocks quickly fade away.</p>
 
-<p>Cabergolinum efficiently eliminates female&rsquo;s prolactin it is mostly beneficial during stacks with Finaplix. Testosterone will renew soon aft the stop of ur cycle. <strong><a href="http://hardcoresport.github.io/blog/n-phenyl/">19-Norandrostenolone Phenyl</a></strong> runs perfectly under Cabaser application. Dostinex stops the possible crazy release of prolactin hormone.</p>
+<p>Cabergolinum efficiently eliminates female&rsquo;s prolactin it is mostly beneficial during stacks with Finaplix. Testosterone will renew soon aft the stop of ur cycle. <strong><a href="https://antelopelei.github.io/blog/n-phenyl/">19-Norandrostenolone Phenyl</a></strong> runs perfectly under Cabaser application. Dostinex stops the possible crazy release of prolactin hormone.</p>
 
 <h3 id="drawbacks-of-cycle-medications-stuff"><strong>Drawbacks of Cycle Medications stuff</strong></h3>
 
 <p>SERM usage through the cycles is literally stupid, will reduce promising profits &amp; going to shut down ur receptors. Typical oestrogen level is fundamental 4 strong action of roids. SERM through cycle are the extreme decision, the lifeline 4 a chemist once estrogen has gone uncontrollable.</p>
 
-<p>Roider must hold Femara on tap, just look after the estradiol. Likelihood of bitch tits climbs up when one initiated combination accompanied by T hormone. Limit estrogen efficiently - <strong><a href="http://hardcoresport.github.io/after-track/">instead PCT</a></strong> SERM add AI.</p>
+<p>Roider must hold Femara on tap, just look after the estradiol. Likelihood of bitch tits climbs up when one initiated combination accompanied by T hormone. Limit estrogen efficiently - <strong><a href="https://antelopelei.github.io/after-track/">instead PCT</a></strong> SERM add AI.</p>
 
 <p>Order necessary supplements to calmly go along ur cycle, this is much wiser than work on real troubles. Ancillary Products must remain in stock of wise user. Ignorance with bodybuilding medication are non compatible, which usually may feel uneasy to unskilled novice.</p>
 
