--- a/after-track/index.html
+++ b/after-track/index.html
@@ -20,7 +20,7 @@
 </style>
 
 
-<link rel="stylesheet" href="http://antelopelei.github.io//css/main.css">
+<link rel="stylesheet" href="https://antelopelei.github.io//css/main.css">
 
 
 
@@ -146,7 +146,7 @@
 
 <h2 id="advantages-of-pct-supplements-stuff"><strong>Advantages of PCT supplements stuff</strong></h2>
 
-<p>PCT Therapy ignore - terrible mistake which always leads to muscular damage. AS Shots cut release of endogen hormones to minimal capacity, they mess up the work of endocrine gland. Weak roid won&rsquo;t be there, most of AAS <strong><a href="http://hardcoresport.github.io/dsots/">Injections</a></strong> eventually decrease formation of the test inside our body.</p>
+<p>PCT Therapy ignore - terrible mistake which always leads to muscular damage. AS Shots cut release of endogen hormones to minimal capacity, they mess up the work of endocrine gland. Weak roid won&rsquo;t be there, most of AAS <strong><a href="https://antelopelei.github.io/dsots/">Injections</a></strong> eventually decrease formation of the test inside our body.</p>
 
 <p>U need to look after your results to keep on ur score and get better. Prime mission for practical BB is lean muscle maintenance combined with improving of body&rsquo;s testosterone. Hardly-gained kilograms during cycle - it&rsquo;s basically a first step in athlete&rsquo;s quest.</p>
 
@@ -164,11 +164,11 @@
 
 <h3 id="recovery-medications-cycle"><strong>Recovery Medications cycle</strong></h3>
 
-<p>Toremifene holds the muscle mass volume, should get back the capability of HPG system irritated with <strong><a href="http://hardcoresport.github.io/main/">Anabolic Steroids</a></strong> through the cycle. <strong><a href="http://hardcoresport.github.io/blog/tamoxiphenum/">Tamox</a></strong> is popular bodybuilding tool for increasing bad Test, effective antiestrogenic pill. Obligatory associate for test directly after the finish of cycle - Clomid.</p>
+<p>Toremifene holds the muscle mass volume, should get back the capability of HPG system irritated with <strong><a href="https://antelopelei.github.io/main/">Anabolic Steroids</a></strong> through the cycle. <strong><a href="https://antelopelei.github.io/blog/tamoxiphenum/">Tamox</a></strong> is popular bodybuilding tool for increasing bad Test, effective antiestrogenic pill. Obligatory associate for test directly after the finish of cycle - Clomid.</p>
 
 <p>Spiropent is beneficial for the reliable cortisol minimization and total recovering. Insufficient to just boost Testosterone to genuinely maintain muscle mass - Spiropent fulfils force of anti-estrogens. Necessary anti-estrogen ally for lean mass protecting against damage of cortisol - Buterol.</p>
 
-<p>Milophene - necessary substitute 4 Tamoxifen Citrate to heighten own testosterone on rounds that contains Nortestosterone <strong><a href="http://hardcoresport.github.io/blog/n-phenyl/">Phenyl</a></strong>. Simply replace Tamoxifen to it &amp; work, Milophene does not stimulate unneeded PRL forming. Clomifene is definitely beneficial just when you choose 19-Nortestosterone Phenylpropionate. Don&rsquo;t swallow Clomiphene following combos of other types of drugs, this can be much more intense, costly.</p>
+<p>Milophene - necessary substitute 4 Tamoxifen Citrate to heighten own testosterone on rounds that contains Nortestosterone <strong><a href="https://antelopelei.github.io/blog/n-phenyl/">Phenyl</a></strong>. Simply replace Tamoxifen to it &amp; work, Milophene does not stimulate unneeded PRL forming. Clomifene is definitely beneficial just when you choose 19-Nortestosterone Phenylpropionate. Don&rsquo;t swallow Clomiphene following combos of other types of drugs, this can be much more intense, costly.</p>
 
 <h3 id="stamina-effects-from-recovery-drugs-cycles"><strong>Stamina effects from Recovery Drugs cycles</strong></h3>
 
@@ -188,7 +188,7 @@
 
 <h3 id="post-cycle-supplements-for-newbies"><strong>Post Cycle Supplements for newbies</strong></h3>
 
-<p>Chloromethandienone, <strong><a href="http://hardcoresport.github.io/blog/cypionate/">Cypionate</a></strong> - our body will not concern what anabolic you implement - the brain discovers high testosterone and quits to provide bodily androgens. Some stack u applying or maybe single, strong or maybe mild - hypothalamus won&rsquo;t analyze the titles of all AS Drugs.</p>
+<p>Chloromethandienone, <strong><a href="https://antelopelei.github.io/blog/cypionate/">Cypionate</a></strong> - our body will not concern what anabolic you implement - the brain discovers high testosterone and quits to provide bodily androgens. Some stack u applying or maybe single, strong or maybe mild - hypothalamus won&rsquo;t analyze the titles of all AS Drugs.</p>
 
 <p>Cycles end going to ruthlessly break the muscular tissues &amp; punch in your jewels, just the question of days. Post solo use one will not require 2 have PCT - this viewpoint just a madness. Ur principle doesn&rsquo;t work if the hormonal level won&rsquo;t be quickly restored.</p>
 
