--- a/alpha/index.html
+++ b/alpha/index.html
@@ -20,7 +20,7 @@
 </style>
 
 
-<link rel="stylesheet" href="http://antelopelei.github.io//css/main.css">
+<link rel="stylesheet" href="https://antelopelei.github.io//css/main.css">
 
 
 
@@ -146,9 +146,9 @@
 
 <h2 id="as-tablets-dudes-information"><strong>AS Tablets dudes information</strong></h2>
 
-<p>Finest outcomes can be achievable in stacks with AS Pills. Sport Candies are booster at BB&rsquo;s menu to gain rapid start! In the performance improvement department of athletic drugs, injections &amp; tablets R bound. A part of all AS offered as tablets, that exact substances cannot be available in injectable form. Have you ever seen liquid <strong><a href="http://hardcoresport.github.io/blog/winstrol-depot/">Oral-Winstrol</a></strong> in the shots?</p>
+<p>Finest outcomes can be achievable in stacks with AS Pills. Sport Candies are booster at BB&rsquo;s menu to gain rapid start! In the performance improvement department of athletic drugs, injections &amp; tablets R bound. A part of all AS offered as tablets, that exact substances cannot be available in injectable form. Have you ever seen liquid <strong><a href="https://antelopelei.github.io/blog/winstrol-depot/">Oral-Winstrol</a></strong> in the shots?</p>
 
-<p>Anabolic Pills unquestionably rise the profits from <strong><a href="http://hardcoresport.github.io/blog/prop-shots/">Propionate</a></strong> of Testosterone use, this offers opportunity to apply reasonable dosage amount of shots but receive more improvement. The optimal way for a novice to discover the impacts from &ldquo;muscle building sweets&rdquo; - Anabolic Pills. Sport Candies strengthen intense actions of some juice, support the hormones within every mix.</p>
+<p>Anabolic Pills unquestionably rise the profits from <strong><a href="https://antelopelei.github.io/blog/prop-shots/">Propionate</a></strong> of Testosterone use, this offers opportunity to apply reasonable dosage amount of shots but receive more improvement. The optimal way for a novice to discover the impacts from &ldquo;muscle building sweets&rdquo; - Anabolic Pills. Sport Candies strengthen intense actions of some juice, support the hormones within every mix.</p>
 
 <h3 id="pills-for-fitness"><strong>Pills for fitness</strong></h3>
 
@@ -158,7 +158,7 @@
 
 <p>Dehydrochlormethyltestosterone is certainly good enough by itself, although definitely can uncover his largest potential inside of stacks together with anabolic steroid shots. 4-Chlorodehydromethyltestosterone should bring shape, if you have 2 receive even more but small risks, fit nicely in to your combination.</p>
 
-<p><strong><a href="http://hardcoresport.github.io/blog/methandienone/">Dbol</a></strong> will bring a handful of good pounds fast, even by itself, it is inexpensive, very simple and available. Nabolin - prevalent gym candy, bulking supervisor within sports industry.</p>
+<p><strong><a href="https://antelopelei.github.io/blog/methandienone/">Dbol</a></strong> will bring a handful of good pounds fast, even by itself, it is inexpensive, very simple and available. Nabolin - prevalent gym candy, bulking supervisor within sports industry.</p>
 
 <p>Androstanazole - pre-competitive AS number 1, base product for weight reduction cycles. Stromba is crucial roid 4 athletes for contests training.</p>
 
@@ -172,7 +172,7 @@
 
 <p>Lots of BB think injections automatically get to the circulation, when tabs pass through the gut so must run slow and this is not real! Pills carry excellent anabolic warp making your AAS stack efficient.</p>
 
-<p>AAS Candies provide full control to manage the cycle. With orals, comfortably 2 manipulate amounts of anabolic inside blood plasma, this difficult 2 accomplish with fastest kind of <strong><a href="http://hardcoresport.github.io/dsots/">injects</a></strong>.</p>
+<p>AAS Candies provide full control to manage the cycle. With orals, comfortably 2 manipulate amounts of anabolic inside blood plasma, this difficult 2 accomplish with fastest kind of <strong><a href="https://antelopelei.github.io/dsots/">injects</a></strong>.</p>
 
 <p>Oral steroids will make your physique improved - their utilization produces fast results, decent exhaust. Certainly no shot marks &amp; the related concerns - Gym Pills help one to cover up the typical faults of a rookie.</p>
 
@@ -184,7 +184,7 @@
 
 <p>Stackers including Chlorodehydromethyltestosterone, should become decent choice to every beginner. Take Anapolon if U would like 2 watch larger number on the weighing scales.</p>
 
-<p>Beneficial component for solid muscle building stack will be <strong><a href="http://hardcoresport.github.io/blog/cypionate/">Testosterone C</a></strong>. Nevertheless, the practical highest of the AS tablets results can be only doable when blended with the appropriate injections..</p>
+<p>Beneficial component for solid muscle building stack will be <strong><a href="https://antelopelei.github.io/blog/cypionate/">Testosterone C</a></strong>. Nevertheless, the practical highest of the AS tablets results can be only doable when blended with the appropriate injections..</p>
 
 <h3 id="mass-drugs-mass-gains"><strong>Mass Drugs mass gains</strong></h3>
 
