--- a/dsots/index.html
+++ b/dsots/index.html
@@ -20,7 +20,7 @@
 </style>
 
 
-<link rel="stylesheet" href="http://antelopelei.github.io//css/main.css">
+<link rel="stylesheet" href="https://antelopelei.github.io//css/main.css">
 
 
 
@@ -146,21 +146,21 @@
 
 <h2 id="roid-injections-beginners-blend"><strong>Roid Injections beginners blend</strong></h2>
 
-<p>Winstroid covers from luteotropin flooding, decreases SHBG - harmonizes hormonal proportion. <strong><a href="http://hardcoresport.github.io/blog/winstrol-depot/">Strombaject</a></strong> is a crappy option 4 muscular growth, top position - a grade improvement of the raw muscle tissues. Where equally sturdiness plus quickness crucial, Winstrol-V can be really recommended.</p>
+<p>Winstroid covers from luteotropin flooding, decreases SHBG - harmonizes hormonal proportion. <strong><a href="https://antelopelei.github.io/blog/winstrol-depot/">Strombaject</a></strong> is a crappy option 4 muscular growth, top position - a grade improvement of the raw muscle tissues. Where equally sturdiness plus quickness crucial, Winstrol-V can be really recommended.</p>
 
 <p>Metenolone Enanthate is really a smooth steroid, gives purely stable mass at your body, though impressive results going to demand lengthy distance. Methenolone Enanthate is not styled for bulking-geeks, it&rsquo;s risk-free, quiet luxury AS ideal for grade connoisseur.</p>
 
-<p><strong><a href="http://hardcoresport.github.io/blog/n-phenyl/">Phenylpropionate</a></strong> is truly mass growing pro, well established anabolic. <strong><a href="http://hardcoresport.github.io/blog/nor-testosterone/">Nortestosteronum</a></strong> promotes mass, handles traumas, but needs regulation for prolactin concentrations, so not everyone could cope that very fine.</p>
+<p><strong><a href="https://antelopelei.github.io/blog/n-phenyl/">Phenylpropionate</a></strong> is truly mass growing pro, well established anabolic. <strong><a href="https://antelopelei.github.io/blog/nor-testosterone/">Nortestosteronum</a></strong> promotes mass, handles traumas, but needs regulation for prolactin concentrations, so not everyone could cope that very fine.</p>
 
 <p>Permastril will eliminate excess weight considerably better compared to different AAS, though should not maximize muscles, going to deliver the maximum power. Medrotestron propionate keeps your lean muscle from ruining on low-carb hardcore throughout weight-reducing phase. Medrotestron propionate is real cheat code for the experienced BBs, valuable item inside society of strong fatburning.</p>
 
-<p><strong><a href="http://hardcoresport.github.io/blog/t-h/">Trenbolone H</a></strong> - a force champ of bodybuilding world, the brother to the Retabolil in composition. <strong><a href="http://hardcoresport.github.io/blog/trenbolone-enanthate/">Trenbolone E</a></strong> asks the awareness, it is favourite of enthusiasts who certainly need alot more. Trenbolone Hexahydrobenzylcarbonate is truly muscular grow and shaping in single bottle.</p>
+<p><strong><a href="https://antelopelei.github.io/blog/t-h/">Trenbolone H</a></strong> - a force champ of bodybuilding world, the brother to the Retabolil in composition. <strong><a href="https://antelopelei.github.io/blog/trenbolone-enanthate/">Trenbolone E</a></strong> asks the awareness, it is favourite of enthusiasts who certainly need alot more. Trenbolone Hexahydrobenzylcarbonate is truly muscular grow and shaping in single bottle.</p>
 
 <p>EQ provide great bulking and vascularity, load your blood stream with o2 and then shall create improved muscular contour. Boldenone Undec is always existing with elongated solutions, favors long phases and fashioned for continual usage.</p>
 
 <p>Your physique brings its personal male androgen ample to hold everyday life. Test hormone - central reason of muscles tissue increase in gals &amp; men, the start of all steroids. Over basis of Eth of Test is created virtually any anabolic steroid stack.</p>
 
-<p>Sustanon in structure considered comparable to Propionate of Testosterone, important juice, it differs through his 4 parts active period. <strong><a href="http://hardcoresport.github.io/blog/sustanone/">Sustanon 250</a></strong> can be the perfect alternative and basically practical compared to split Test types. Omnadren 250 or male sex hormone are literally synonyms, since Susta 250 works just as Test.</p>
+<p>Sustanon in structure considered comparable to Propionate of Testosterone, important juice, it differs through his 4 parts active period. <strong><a href="https://antelopelei.github.io/blog/sustanone/">Sustanon 250</a></strong> can be the perfect alternative and basically practical compared to split Test types. Omnadren 250 or male sex hormone are literally synonyms, since Susta 250 works just as Test.</p>
 
 <h3 id="bulking-effects-of-injectable-anabolics-use"><strong>Bulking effects of Injectable Anabolics use</strong></h3>
 
@@ -186,7 +186,7 @@
 
 <h3 id="juice-for-weight-gain"><strong>Juice for weight gain</strong></h3>
 
-<p>It&rsquo;s complicated to the newbees, when uneducated nerds offer 2 have just <strong><a href="http://hardcoresport.github.io/alpha/">roid tablets</a></strong>. Without any competitors, 19-Norandrostenolone Phenyl is just lord in proficiency. Even when they have specific rate of the toxic affect, Bodybuilders Tabs become highly powerful, valuable and also permanently required.</p>
+<p>It&rsquo;s complicated to the newbees, when uneducated nerds offer 2 have just <strong><a href="https://antelopelei.github.io/alpha/">roid tablets</a></strong>. Without any competitors, 19-Norandrostenolone Phenyl is just lord in proficiency. Even when they have specific rate of the toxic affect, Bodybuilders Tabs become highly powerful, valuable and also permanently required.</p>
 
 <p>No matter what experts claim, Roid Injections are imperative thing inside the menu of each informed BB. Biggest reason for difficulties from the usage of Anabolic Injects - occasional AS cycle plans, also careless technique. Stay pragmatic - control total period of AS impact plus dose due to esters!</p>
 
@@ -208,7 +208,7 @@
 
 <p>User press piston, taking 100 pct arriving of the active compound on board. Intramuscular AS can&rsquo;t get destroyed down its path, comparable to pills, juice goes promptly into a blood flow. In actuality, juices would fully promote itself just at cycle with orals, vice versa.</p>
 
-<p>Howcome to complement each anabolic combination liquid gear is necessary? May it b plausible to use exclusively Roid Tabs to support truly excellent routine? Gym Juice are essential piece and even the real platform to have high quality result. Maybe you have heard of <strong><a href="http://hardcoresport.github.io/blog/t-mix/">Tren Blend</a></strong>?</p>
+<p>Howcome to complement each anabolic combination liquid gear is necessary? May it b plausible to use exclusively Roid Tabs to support truly excellent routine? Gym Juice are essential piece and even the real platform to have high quality result. Maybe you have heard of <strong><a href="https://antelopelei.github.io/blog/t-mix/">Tren Blend</a></strong>?</p>
 </div>
 
     
