--- a/main/index.html
+++ b/main/index.html
@@ -20,7 +20,7 @@
 </style>
 
 
-<link rel="stylesheet" href="http://antelopelei.github.io//css/main.css">
+<link rel="stylesheet" href="https://antelopelei.github.io//css/main.css">
 
 
 
@@ -148,7 +148,7 @@
 
 <p>How you lessen trouble? - do don&rsquo;t exaggerate this. Have a time in between routines, once your testing become like in the start - you can start all over. Stop near 2 months after AS phase, test out test levels and bio. Only about couple of steps for usage.</p>
 
-<p>U must take back body&rsquo;s hormones by using SERMs, manage cortisol quickly. Post <strong><a href="http://hardcoresport.github.io/blog/n-phenyl/">Phenylpropionate</a></strong> have Clomifene, consider TMX following else. Employ Clenbuterol to maintain the weight. When sexual drive became bad - attach some Hydroxyhomosildenafil.</p>
+<p>U must take back body&rsquo;s hormones by using SERMs, manage cortisol quickly. Post <strong><a href="https://antelopelei.github.io/blog/n-phenyl/">Phenylpropionate</a></strong> have Clomifene, consider TMX following else. Employ Clenbuterol to maintain the weight. When sexual drive became bad - attach some Hydroxyhomosildenafil.</p>
 
 <p>There&rsquo;s loads of the chatter like their personal life is in dispair &amp; hassle or supposedly BBs are constantly unhappy, but reality tells us the reverse. The testes deliver homemade AS, but nothing awful gone wrong, man&rsquo;s testes was making testo-sterone a zillion yrs. Almost all roids available these days are testosterone hormones spinoff.</p>
 
@@ -156,11 +156,11 @@
 
 <h3 id="steroid-injects-newbies-instructions"><strong>Steroid Injects newbies instructions</strong></h3>
 
-<p>AS provoke all processes intended for reconstruction, healing and increase in lean muscle. Anabolics enhance overall generation of brand-new cells &amp; muscle tissue. AAS <strong><a href="http://hardcoresport.github.io/dsots/">Injects</a></strong> have got serious impact on muscles, compounds can be used at athletics like enhancer.</p>
+<p>AS provoke all processes intended for reconstruction, healing and increase in lean muscle. Anabolics enhance overall generation of brand-new cells &amp; muscle tissue. <strong><a href="https://antelopelei.github.io/dsots/">AAS Injects</a></strong> have got serious impact on muscles, compounds can be used at athletics like enhancer.</p>
 
 <p>Bodybuilding nutrition mainly secures basic needs and gives resources to your physique. It isn&rsquo;t basic effect devoid of free hormone - absolutely no cause for strong outcome. When your body creates test muscle cells will increase.</p>
 
-<p>In short - the test adjusts entire nitric level to the positive mode. <strong><a href="http://hardcoresport.github.io/alpha/">Steroid Pills</a></strong> form for many BB activities great circumstances.</p>
+<p>In short - the test adjusts entire nitric level to the positive mode. <strong><a href="https://antelopelei.github.io/alpha/">Steroid Pills</a></strong> form for many BB activities great circumstances.</p>
 
 <p>Modern anabolic supplements has become the technique for qualified at biochemistry, solution to reach unapproachable outcome. The natural hormonal setting induces the mass gains and relieves a ultra strength.</p>
 
@@ -168,11 +168,11 @@
 
 <h3 id="as-tablets-safe-cycle"><strong>AS Tablets safe cycle</strong></h3>
 
-<p>Apply aromatized steroids to boost weight - incorporate androgens for the back ground - Anapolon 50. Get potent anabolic steroids as <strong><a href="http://hardcoresport.github.io/blog/methandienone/">Dianabol</a></strong> to get muscles, but not poor watery mass.</p>
+<p>Apply aromatized steroids to boost weight - incorporate androgens for the back ground - Anapolon 50. Get potent anabolic steroids as <strong><a href="https://antelopelei.github.io/blog/methandienone/">Dianabol</a></strong> to get muscles, but not poor watery mass.</p>
 
 <p>To maintain workout processes correct, one need to carefully record blood tests &amp; testosterone, continue checking. Rookies frequently hear like good to pour oil into the syringe and swallow a pill.</p>
 
-<p>To monkey around inject Trienbolone, AS may pack one with the excellent power &amp; wonderful quality. Wish to reduce unneeded pounds? - inject <strong><a href="http://hardcoresport.github.io/blog/winstrol-depot/">Oral Winny</a></strong> and take the juice along with the <strong><a href="http://hardcoresport.github.io/blog/prop-shots/">Prop of Test</a></strong> for nice background. Permastril favor exceptionally ambitious bodybuilders.</p>
+<p>To monkey around inject Trienbolone, AS may pack one with the excellent power &amp; wonderful quality. Wish to reduce unneeded pounds? - inject <strong><a href="https://antelopelei.github.io/blog/winstrol-depot/">Oral Winny</a></strong> and take the juice along with the <strong><a href="https://antelopelei.github.io/blog/prop-shots/">Prop of Test</a></strong> for nice background. Permastril favor exceptionally ambitious bodybuilders.</p>
 
 <p>AS Drugs demands that the user understand the stuff, that is a component for the improved BBs. Once u wish to make progress while having overall wellness perks - specify the targets well.</p>
 
